# Sentinel

./: .gitignore  BENCH_PLAN.md  CLA.md  INFORMATIION.md  LICENSE  PLAN.md  README.md  SECURITY.md  SETUP.md  SUPERVISOR_WAKE_PACKET_NOTES.md  SWE.md  SWE2.md  SpecBench_numeric_task.md  alternative_prompt.md  approval_review_mechanism.md  handoff.md  need.md  new_plan.md  proposal.md  pyproject.toml  requirements.md  revised.md  safe_gates.md  supervisor_review.md  testing.md  tt.md
.github/workflows/: cla.yml  publish.yml  tests.yml
scripts/: run_sentinel_container_attempt.py  run_sentinel_specbench_attempt.py  run_sentinel_task.sh
supervisor/: FORTEST.md  __init__.py  _build.py  adversary_agent.py  approval_triage.py  approvals.py  appserver.py  bench.py  bench_context.py  bench_metrics.py  bench_results.py  bench_runner.py  bench_tokens.py  coder.py  codex_cli.py  config_editor.py  controller.py  doctor.py  health.py  main.py  policy.py  process.py  project_config.py  review_artifacts.py  state.py  supervisor_agent.py  task_select.py  timing.py  tui.py  update_check.py  version.py  workspace_clean.py  workspace_snapshot.py  workspace_state.py  wrapper.py
supervisor/adapters/: __init__.py  claude.py  codex.py
supervisor/gates/: __init__.py  completion_preflight.py  runtime_wake.py
supervisor/hooks/: __init__.py  claude_hook.py  codex_hook.py  common.py
supervisor/ipc/: __init__.py  client.py  server.py
supervisor/llm_driver/: __init__.py  base.py  claude.py  codex.py  openrouter.py
supervisor/prompts/: __init__.py  prompts.toml  supervisor.py
supervisor/schemas/: __init__.py  models.py
tests/: TEST_PROMPTS.json  __init__.py  conftest.py  test_adversary_agent.py  test_approvals.py  test_appserver.py  test_bench.py  test_cli_entrypoint.py  test_cli_model_flags.py  test_cli_update.py  test_codex_adapter.py  test_codex_hook.py  test_completion_knowledge.py  test_config_editor_render.py  test_container_runner.py  test_doctor.py  test_hooks_common.py  test_llm_driver.py  test_policy.py  test_process.py  test_project_config.py  test_safe_gates.py  test_schemas.py  test_sentinel_state.py  test_state_health.py  test_supervisor_agent.py  test_task_select.py  test_timing.py  test_tui.py  test_update_check.py  test_version.py  test_workspace_clean.py  test_workspace_snapshot.py  test_wrapper_fake.py
tests/fake_agent/: __init__.py  agent.py  driver.py
tests/integration/: test_smoke.py
