[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisor-agent"
version = "0.1.0"
description = "Autonomous supervisor wrapper for Claude Code and Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
supervisor = "supervisor.main:cli"

[tool.setuptools.packages.find]
include = ["supervisor*"]

[tool.setuptools.package-data]
"supervisor.prompts" = ["*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
