[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-supervisor"
version = "0.1.0rc1"
description = "Terminal supervisor for autonomous Codex app-server runs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Maxim Bocharov" },
]
dependencies = [
  "click>=8.1",
  "packaging>=24.0",
  "pydantic>=2.0",
  "prompt-toolkit>=3.0",
  "wcwidth>=0.2",
]

[project.urls]
Homepage = "https://github.com/Makson179/Sentinel"
Repository = "https://github.com/Makson179/Sentinel"
Issues = "https://github.com/Makson179/Sentinel/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
sentinel = "supervisor.main:cli"

[tool.setuptools.packages.find]
include = ["supervisor*"]

[tool.setuptools.package-data]
"supervisor.prompts" = ["*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
